-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u40, 9
-
Component/s: hotspot
-
b37
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083122 | emb-9 | Thomas Schatzl | P2 | Resolved | Fixed | b37 |
| JDK-8063344 | 8u45 | Thomas Schatzl | P2 | Resolved | Fixed | b01 |
| JDK-8060019 | 8u40 | Thomas Schatzl | P2 | Closed | Fixed | b11 |
| JDK-8071080 | emb-8u47 | Thomas Schatzl | P2 | Resolved | Fixed | team |
Recent changes in JDK-8038423 allow G1 to decommit regions within the heap freely, the VM always initializes associated auxiliary data structures (BOT, card table, mark bitmaps).
This works somewhat against OSes lazy initialization of committed pages where they are actually only backed by physical memory on the first access.
These startup benchmarks never actually use this memory because they are so simple, so this causes a footprint regression with the mentioned change.
This works somewhat against OSes lazy initialization of committed pages where they are actually only backed by physical memory on the first access.
These startup benchmarks never actually use this memory because they are so simple, so this causes a footprint regression with the mentioned change.
- backported by
-
JDK-8063344 Footprint regressions with JDK-8038423
-
- Resolved
-
-
JDK-8071080 Footprint regressions with JDK-8038423
-
- Resolved
-
-
JDK-8083122 Footprint regressions with JDK-8038423
-
- Resolved
-
-
JDK-8060019 Footprint regressions with JDK-8038423
-
- Closed
-
- relates to
-
JDK-8060021 Startup performance regressions after JDK-8038423
-
- Closed
-
-
JDK-8038423 G1: Decommit memory within the heap
-
- Resolved
-
(1 relates to)